--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="rus">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -9,7 +10,9 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="#" href="index.html" width="160" height="65" alt="Логотип дизайн студии «Нёрдс»">
+				<svg width="160" height="65">
+					<path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
+					<path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg>
 			</a>
 			<ul class="site-navigation">
 				<li><a href="#">Студия</a></li>
@@ -44,10 +47,10 @@
 									</div>
 								</div>
 								<div class="range-fields">
-									
+
 									<label for="from" class="range-fields-label">От</label>
 									<input id="from" type="number" class="range-fields-item" min="0" placeholder="0">
-																		
+
 									<label for="before" class="range-fields-label">До</label>
 									<input id="before" type="number" class="range-fields-item" max="15000" placeholder="15000">
 								</div>
@@ -108,12 +111,102 @@
 					</ul>
 				</div>
 				<ul class="catalog-list">
-					<li class="catalog-item"><a href="#">Sedona</a></li>
-					<li class="catalog-item"><a href="#">Pink</a></li>
-					<li class="catalog-item"><a href="#">Borodinski</a></li>
-					<li class="catalog-item"><a href="#">Mishka</a></li>
-					<li class="catalog-item"><a href="#">A+</a></li>
-					<li class="catalog-item"><a href="#">Kvast</a></li>
+					<li class="catalog-item"><a href="#">
+							<div class="catalog-item-header">
+								<svg width="360" height="40">
+									<path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" /></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-sedona.jpg" alt="Sedona" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">Sedona</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
+
+					<li class="catalog-item"><a href="#">
+							 <div class="catalog-item-header">
+								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-pink.jpg" alt="Pink" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">Pink</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
+
+					<li class="catalog-item"><a href="#">
+							 <div class="catalog-item-header">
+								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-barbershop.jpg" alt="Borodinski" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">Borodinski</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
+
+					<li class="catalog-item"><a href="#">
+							 <div class="catalog-item-header">
+								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-mishka.jpg" alt="Mishka" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">Mishka</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
+
+					<li class="catalog-item"><a href="#">
+							 <div class="catalog-item-header">
+								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-aplus.jpg" alt="A+" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">A+</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
+
+					<li class="catalog-item"><a href="#">
+							 <div class="catalog-item-header">
+								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+							</div>
+							<div class="catalog-item-wrapper">
+								<img src="img/img-kvast.jpg" alt="Kvast" width="360" height="576">
+							</div>
+							<div class="catalog-item-desc">
+								<h3 class="catalog-item-head">Kvast</h3>
+								<p class="catalog-item-text">
+									Информационный сайт для туристов
+								</p>
+								<button class="btn btn-red">9900 РУБ</button>
+							</div>
+						</a></li>
 				</ul>
 			</div>
 			<ul class="pagination-list">
@@ -131,9 +224,19 @@
 	<footer class="main-footer">
 
 		<ul class="footer-social">
-			<li><a class="social-button" href="#">Вконтакте</a></li>
-			<li><a class="social-button" href="#">Фейсбук</a></li>
-			<li><a class="social-button" href="#">Инстаграм</a></li>
+			<li>
+				<a class="social-button" href="#"><svg width="26" height="15">
+						<path fill="#020202" d="M16 12c1-1 2 2 4 2l1 1h4s2 0 1-2l-3-3c-2-2-2-1 1-5l2-4h-6l-2 3-2 3-1-2c0-3 1-5-1-5H9v1l1 1v5C9 8 8 7 7 4L5 1H0v1l6 10c3 3 7 3 7 3h2v-1l1-2z" /></svg>
+				</a>
+			</li>
+			<li>
+				<a class="social-button" href="#"><svg width="12" height="22">
+						<path fill="#020202" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg></a></li>
+			<li>
+				<a class="social-button" href="#"><svg width="21" height="21">
+						<path fill="#020202" d="M18 0H3C1 0 0 1 0 3v15c0 2 1 3 3 3h15c2 0 3-1 3-3V3c0-2-1-3-3-3zm-7 7a4 4 0 1 1-1 7 4 4 0 0 1 1-7zm7 11H3V9h1a7 7 0 0 0 0 2 7 7 0 1 0 13 0 6 6 0 0 0 0-2h1v9zm0-11h-4V3h4v4z" /></svg>
+				</a>
+			</li>
 		</ul>
 
 
@@ -143,6 +246,7 @@
 		</p>
 	</footer>
 </body>
+
 </html>
 
 <!--
