--- a/catalog.html
+++ b/catalog.html
@@ -8,20 +8,21 @@
 
 <body>
 	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo" href="index.html">
+		<nav class="main-navigation" aria-label="Навигация на странице">
+			<a class="main-header-logo" href="index.html" aria-label="Логотип студии Нёрдс">
 				<svg width="160" height="65">
 					<path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
 					<path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg>
 			</a>
+			
 			<ul class="site-navigation">
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li class="site-navigation-current"><a href="#">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Студия">Студия</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Клиенты">Клиенты</a></li>
+				<li  class="site-navigation-current"><a href="#" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Контакты">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li><a class="login-link">Корзина</a></li>
+				<li><a href="#" class="login-link" aria-label="Корзина">Корзина</a></li>
 			</ul>
 		</nav>
 
@@ -42,16 +43,16 @@
 								<div class="cost-range-wrapper">
 									<div class="range-content">
 										<span class="range-content-"></span>line
-										<button class="range-content-control"></button>
-										<button class="range-content-control"></button>
+										<button class="range-content-control" aria-label="Фильтр товаров Кнопка Увеличить количество"></button>
+										<button class="range-content-control" aria-label="Фильтр товаров Кнопка Уменьшить количество"></button>
 									</div>
 								</div>
 								<div class="range-fields">
 
-									<label for="from" class="range-fields-label">От</label>
+									<label for="from" class="range-fields-label" aria-label="Окно для количества От">От</label>
 									<input id="from" type="number" class="range-fields-item" min="0" placeholder="0">
 
-									<label for="before" class="range-fields-label">До</label>
+									<label for="before" class="range-fields-label" aria-label="Окно для количества До пятнадцати тысяч">До</label>
 									<input id="before" type="number" class="range-fields-item" max="15000" placeholder="15000">
 								</div>
 							</div>
@@ -61,41 +62,41 @@
 							<legend class="filter-grid-legend">Сетка:</legend>
 							<p class="filter-group-radio">
 								<input id="adaptive" class="filter-grid-radio" type="radio" name="question-one" value="ad" checked>
-								<label for="adaptive" class="filter-grid-label">Адаптивная</label>
+								<label for="adaptive" class="filter-grid-label" aria-label="Тип сетки Адаптивная ">Адаптивная</label>
 							</p>
 							<p class="filter-group-radio">
 								<input id="fixed" class="filter-grid-radio" type="radio" name="question-one" value="fx">
-								<label for="fixed" class="filter-grid-label">Фиксированная </label>
+								<label for="fixed" class="filter-grid-label" aria-label="Тип сетки Фиксированная">Фиксированная </label>
 							</p>
 							<p class="filter-group-radio">
 								<input id="rubber" class="filter-grid-radio" type="radio" name="question-one" value="rb">
-								<label for="rubber" class="filter-grid-label">Резиновая </label>
+								<label for="rubber" class="filter-grid-label" aria-label="Тип сетки Резиновая">Резиновая </label>
 							</p>
 						</fieldset>
 						<fieldset class="filter-features">
 							<legend class="filter-features-legend">ОСОБЕННОСТИ:</legend>
 							<p class="filter-group-checkbox">
 								<input id="slider" type="checkbox" name="slider" checked>
-								<label for="slider" class="filter-features-checkbox">Слайдер </label>
+								<label for="slider" class="filter-features-checkbox" aria-label="Добавить в наполнение: Слайдер">Слайдер </label>
 							</p>
 							<p class="filter-group-checkbox">
 								<input id="advantages" type="checkbox" name="advantages">
-								<label for="advantages" class="filter-features-checkbox">Блок преимуществ </label>
+								<label for="advantages" class="filter-features-checkbox" aria-label="Добавить в наполнение: Блок преимуществ">Блок преимуществ </label>
 							</p>
 							<p class="filter-group-checkbox">
 								<input id="news" type="checkbox" name="news" checked>
-								<label for="news" class="filter-features-checkbox">Новости </label>
+								<label for="news" class="filter-features-checkbox" aria-label="Добавить в наполнение: Новости" >Новости </label>
 							</p>
 							<p class="filter-group-checkbox">
 								<input id="galery" type="checkbox" name="galery">
-								<label for="galery" class="filter-features-checkbox">Галерея </label>
+								<label for="galery" class="filter-features-checkbox" aria-label="Добавить в наполнение: Галерея">Галерея </label>
 							</p>
 							<p class="filter-group-checkbox">
 								<input id="basket" type="checkbox" name="basket">
-								<label for="basket" class="filter-features-checkbox">Корзина </label>
+								<label for="basket" class="filter-features-checkbox" aria-label="Добавить в наполнение: Корзина">Корзина </label>
 							</p>
 						</fieldset>
-						<input class="form-button" type="submit" value="Показать">
+						<input class="form-button" type="submit" value="Показать" aria-label="показать варианты">
 					</form>
 				</div>
 
@@ -105,13 +106,13 @@
 				<div class="catalog-sort">
 					<h3 class="catalog-header">СОРТИРОВАТЬ:</h3>
 					<ul class="catalog-list">
-						<li><a href="#">По цене</a></li>
-						<li><a href="#">По типу</a></li>
-						<li><a href="#">По названию</a></li>
+						<li><a href="#" aria-label="Фильтр: Список товаров, СОРТИРОВАТЬ По цене">По цене</a></li>
+						<li><a href="#" aria-label="Фильтр: Список товаров, СОРТИРОВАТЬ По типу">По типу</a></li>
+						<li><a href="#" aria-label="Фильтр: Список товаров, СОРТИРОВАТЬ По названию">По названию</a></li>
 					</ul>
 				</div>
 				<ul class="catalog-list">
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="Информационный сайт для туристов Седона">
 							<div class="catalog-item-header">
 								<svg width="360" height="40">
 									<path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z" /></svg>
@@ -124,11 +125,11 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="сайт Pink">
 							 <div class="catalog-item-header">
 								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 							</div>
@@ -140,11 +141,11 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="сайт Барбершоп Бородинский">
 							 <div class="catalog-item-header">
 								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 							</div>
@@ -156,11 +157,11 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="Сайт Мишка">
 							 <div class="catalog-item-header">
 								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 							</div>
@@ -172,11 +173,11 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="Сайт а плюс">
 							 <div class="catalog-item-header">
 								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 							</div>
@@ -188,11 +189,11 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 
-					<li class="catalog-item"><a href="#">
+					<li class="catalog-item"><a href="#" aria-label="Сайт Кваст">
 							 <div class="catalog-item-header">
 								<svg width="360" height="40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 							</div>
@@ -204,16 +205,16 @@
 								<p class="catalog-item-text">
 									Информационный сайт для туристов
 								</p>
-								<button class="btn btn-red">9900 РУБ</button>
+								<button class="btn btn-red" aria-label="Кнопка стоимости 9900 РУБ">9900 РУБ</button>
 							</div>
 						</a></li>
 				</ul>
 			</div>
 			<ul class="pagination-list">
-				<li class="pagination-item-current"><a href="">1</a></li>
-				<li class="pagination-item"><a href="">2</a></li>
-				<li class="pagination-item"><a href="">3</a></li>
-				<li class="pagination-item"><a href="">Следующая</a></li>
+				<li class="pagination-item-current"><a href="" aria-label="Переключатель страница номер один">1</a></li>
+				<li class="pagination-item"><a href="" aria-label="Переключатель страница номер два">2</a></li>
+				<li class="pagination-item"><a href="" aria-label="Переключатель страница номер три">3</a></li>
+				<li class="pagination-item"><a href="" aria-label="Следующая страница">Следующая</a></li>
 			</ul>
 		</section>
 		<section class="map">
@@ -225,15 +226,15 @@
 
 		<ul class="footer-social">
 			<li>
-				<a class="social-button" href="#"><svg width="26" height="15">
+				<a class="social-button" href="#" aria-label="Мы в Вконтакте"><svg width="26" height="15">
 						<path fill="#020202" d="M16 12c1-1 2 2 4 2l1 1h4s2 0 1-2l-3-3c-2-2-2-1 1-5l2-4h-6l-2 3-2 3-1-2c0-3 1-5-1-5H9v1l1 1v5C9 8 8 7 7 4L5 1H0v1l6 10c3 3 7 3 7 3h2v-1l1-2z" /></svg>
 				</a>
 			</li>
 			<li>
-				<a class="social-button" href="#"><svg width="12" height="22">
+				<a class="social-button" href="#" aria-label="Мы в Фейсбуке"><svg width="12" height="22">
 						<path fill="#020202" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg></a></li>
 			<li>
-				<a class="social-button" href="#"><svg width="21" height="21">
+				<a class="social-button" href="#" aria-label="Мы в Инстаграм"><svg width="21" height="21">
 						<path fill="#020202" d="M18 0H3C1 0 0 1 0 3v15c0 2 1 3 3 3h15c2 0 3-1 3-3V3c0-2-1-3-3-3zm-7 7a4 4 0 1 1-1 7 4 4 0 0 1 1-7zm7 11H3V9h1a7 7 0 0 0 0 2 7 7 0 1 0 13 0 6 6 0 0 0 0-2h1v9zm0-11h-4V3h4v4z" /></svg>
 				</a>
 			</li>
@@ -245,6 +246,28 @@
 			<span>Скидка 10% для друзей из социальных сетей.</span>
 		</p>
 	</footer>
+	<div class="modal">
+		<div class="modal-header">
+			<h2 class="">Напишите нам</h2>
+		</div>
+		<form action="post" class="modal-form">
+			<div class="modal-form-group">
+				<p class="modal-form-field">
+					<label for="modal-name" class="modal-form-label" aria-label="Имя пользователя">Ваше имя</label>
+					<input type="text" id="modal-name" class="modal-form-input" placeholder="Имя Фамилия">
+				</p>
+				<p class="modal-form-field">
+					<label for="modal-mail" class="modal-form-label" aria-label="Почта пользователя">Ваш e-mail</label>
+					<input type="email" id="modal-mail" class="modal-form-input" placeholder="email@example.com">
+				</p>
+			</div>
+			<p class="modal-form-field modal-form-field-textarea">
+				<label for="message" class="modal-form-label" aria-label="Введите текст письма">Текст письма</label>
+				<textarea id="message" cols="70" rows="6" placeholder="В свободной форме" class="modal-form-input modal-form-input-textarea"></textarea>
+			</p>
+			<button type="submit" class="btn btn-red" aria-label="Кнопка отправки">Отправить</button>
+		</form>
+	</div>
 </body>
 
 </html>
