--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 
 <body>
 	<header class="main-header">
-		<nav class="main-navigation">
-			<a href="#" class="main-header-logo">
+		<nav class="main-navigation" aria-label="Навигация на странице">
+			<a href="#" class="main-header-logo" aria-label="Логотип студии Нёрдс">
 				<svg width="160" height="65">
 					<path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
 					<path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg>
 			</a>
 			<ul class="site-navigation">
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Студия">Студия</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Клиенты">Клиенты</a></li>
+				<li><a href="catalog.html" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
+				<li><a href="#" aria-label="Перейти в раздел: Контакты">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li><a class="login-link">Корзина</a></li>
+				<li><a href="#" class="login-link" aria-label="Корзина">Корзина</a></li>
 
 				<svg width="15" height="15">
 					<circle fill="#a6a6a6" cx="5" cy="14" r="2" />
@@ -42,7 +42,7 @@
 					Ближе к полуночи работа только начинается.
 				</p>
 
-				<a href="#" class="button button-red">Узнать больше</a>
+				<a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
 				<div class="slide-image-container">
 					<!--Для изображения(img)-->
 					<img src="img/nerds-index-slide1.png" alt="Долго, дорого, скурпулезно" width="698" height="413">
@@ -58,7 +58,7 @@
 					для расчета идеальных пропорций.
 				</p>
 
-				<a href="#" class="button button-red">Узнать больше</a>
+				<a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
 				<div class="slide-image-container">
 					<!--Для изображения(img)-->
 					<img src="img/nerds-index-slide2.png" alt="Любим математику как никто другой" width="663" height="430">
@@ -74,7 +74,7 @@
 					Ближе к полуночи работа только начинается.
 				</p>
 
-				<a href="#" class="button button-red">Узнать больше</a>
+				<a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
 				<div class="slide-image-container">
 					<img src="img/nerds-index-slide3.png" alt="Только ночь, только хардкор" width="759" height="411">
 					<!--Для изображения(img)-->
@@ -95,7 +95,7 @@
 					<p class="services-item-description">
 						Мир никогда не будет прежним после того как увидит ваш сайт!
 					</p>
-					<a href="#" class="button red-button services-button">Заказать</a>
+					<a href="#" class="button red-button services-button" aria-label="Заказать Веб-сайт">Заказать</a>
 
 				</li>
 				<li class="services-item">
@@ -106,7 +106,7 @@
 					<p class="services-item-description">
 						Покорите топ-10 приложений в AppStore и Google Play
 					</p>
-					<a href="#" class="button green-button services-button">Заказать</a>
+					<a href="#" class="button green-button services-button" aria-label="Заказать Приложение">Заказать</a>
 
 				</li>
 				<li class="services-item">
@@ -117,7 +117,7 @@
 					<p class="services-item-description">
 						Вы даже не подозреваете, насколько вы изумительны!
 					</p>
-					<a href="#" class="button yellow-button services-button">Заказать</a>
+					<a href="#" class="button yellow-button services-button" aria-label="Заказать Презентацию">Заказать</a>
 
 				</li>
 			</ul>
@@ -174,10 +174,10 @@
 		<section class="main-clients">
 			<h2 class="visuality-hidden">Наши клиенты</h2>
 			<ul class="clients-list">
-				<li class="clients-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="Html academy" height="68" width="199"></a></li>
-				<li class="clients-item"><a href=""><img src="img/logo-2.png" alt="Barbershop Borodinski" height="90" width="209"></a></li>
-				<li class="clients-item"><a href=""><img src="img/logo-3.png" alt="Pink" height="52" width="185"></a></li>
-				<li class="clients-item"><a href=""><img src="img/logo-4.png" alt="Mishka" height="84" width="173"></a></li>
+				<li class="clients-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="Html academy" height="68" width="199" aria-label="Наш клиент: Html академия"></a></li>
+				<li class="clients-item"><a href=""><img src="img/logo-2.png" alt="Barbershop Borodinski" height="90" width="209" aria-label="Наш клиент: Барбершоп Бородинский"></a></li>
+				<li class="clients-item"><a href=""><img src="img/logo-3.png" alt="Pink" height="52" width="185" aria-label="Наш клиент: Pink"></a></li>
+				<li class="clients-item"><a href=""><img src="img/logo-4.png" alt="Mishka" height="84" width="173" aria-label="Наш клиент: Mishka"></a></li>
 			</ul>
 		</section>
 	</main>
@@ -186,15 +186,15 @@
 
 		<ul class="footer-social">
 			<li>
-				<a class="social-button" href="#"><svg width="26" height="15">
+				<a class="social-button" href="#" aria-label="Мы в Вконтакте"><svg width="26" height="15">
 						<path fill="#020202" d="M16 12c1-1 2 2 4 2l1 1h4s2 0 1-2l-3-3c-2-2-2-1 1-5l2-4h-6l-2 3-2 3-1-2c0-3 1-5-1-5H9v1l1 1v5C9 8 8 7 7 4L5 1H0v1l6 10c3 3 7 3 7 3h2v-1l1-2z" /></svg>
 				</a>
 			</li>
 			<li>
-				<a class="social-button" href="#"><svg width="12" height="22">
+				<a class="social-button" href="#" aria-label="Мы в Фейсбуке"><svg width="12" height="22">
 						<path fill="#020202" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg></a></li>
 			<li>
-				<a class="social-button" href="#"><svg width="21" height="21">
+				<a class="social-button" href="#" aria-label="Мы в Инстаграм"><svg width="21" height="21">
 						<path fill="#020202" d="M18 0H3C1 0 0 1 0 3v15c0 2 1 3 3 3h15c2 0 3-1 3-3V3c0-2-1-3-3-3zm-7 7a4 4 0 1 1-1 7 4 4 0 0 1 1-7zm7 11H3V9h1a7 7 0 0 0 0 2 7 7 0 1 0 13 0 6 6 0 0 0 0-2h1v9zm0-11h-4V3h4v4z" /></svg>
 				</a>
 			</li>
@@ -206,6 +206,29 @@
 			<span>Скидка 10% для друзей из социальных сетей.</span>
 		</p>
 	</footer>
+	
+	<div class="modal">
+		<div class="modal-header">
+			<h2 class="">Напишите нам</h2>
+		</div>
+		<form action="post" class="modal-form">
+			<div class="modal-form-group">
+				<p class="modal-form-field">
+					<label for="modal-name" class="modal-form-label" aria-label="Имя пользователя">Ваше имя</label>
+					<input type="text" id="modal-name" class="modal-form-input" placeholder="Имя Фамилия">
+				</p>
+				<p class="modal-form-field">
+					<label for="modal-mail" class="modal-form-label" aria-label="Почта пользователя">Ваш e-mail</label>
+					<input type="email" id="modal-mail" class="modal-form-input" placeholder="email@example.com">
+				</p>
+			</div>
+			<p class="modal-form-field modal-form-field-textarea">
+				<label for="message" class="modal-form-label" aria-label="Введите текст письма">Текст письма</label>
+				<textarea id="message" cols="70" rows="6" placeholder="В свободной форме" class="modal-form-input modal-form-input-textarea"></textarea>
+			</p>
+			<button type="submit" class="btn btn-red" aria-label="Кнопка отправки">Отправить</button>
+		</form>
+	</div>
 </body>
 
 </html>
