--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,9 @@
 <html lang="rus">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta charset="utf-8">
+	<title>HTML Academy: Нёрдс</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
