--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
 
   <section class="hero">
-      <ul class="hero-list slider centr reset-ul">
-        <li>
+    <div class="slider centr">
+      <ul class="hero-list reset-ul">
+        <li class="selected">
           <div>
             <h2 class="reset-h">Долго, дорого, <br> скрупулезно.</h2>
             <p class="reset-p">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
@@ -62,7 +63,6 @@
           <div>
             <h2 class="reset-h">Любим математику <br> как никто другой</h2>
             <p class="reset-p">Никакого креатива, только математические формулы <br>
-              <p class="-p">Никакого креатива, только математические формулы <br>
               для расчета идеальных пропорций.</p>
             <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
             </div>
@@ -72,9 +72,15 @@
             <h2 class="reset-h">Только ночь,<br> только хардкор</h2>
             <p class="reset-p">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
             <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
-          </article>
+          </div>
         </li>
       </ul>
+      <div class="dots">
+				<button class="dot selected"></button>
+				<button class="dot"></button>
+				<button class="dot"></button>
+      </div>
+    </div>
     </section>
 
   </header>
@@ -222,7 +228,6 @@
   <!-- Скрипты -->
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
   <script src="js/script.js"></script>
-  <script src="js/modal.js"></script>
 </body>
 
 </html>
